Use root user for CI

--- a/.github/workflows/build_session.yml
+++ b/.github/workflows/build_session.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: makarius/isabelle:Isabelle2022
+    container:
+      image: makarius/isabelle:Isabelle2022
+      options: --user root
 
     steps:
       - name: Checkout
