--- a/.github/workflows/build_session.yml
+++ b/.github/workflows/build_session.yml
@@ -26,7 +26,14 @@ jobs:
       - name: Build Session
         run: |
           session="Set_Proc"
-          if [ "{{ github.branch }}" = "CADE_Typing" ]; then
+          if [ "${{ github.branch }}" = "CADE_Typing" ]; then
             session="Set_Proc_Typing"
           fi;
-          /home/isabelle/Isabelle/bin/isabelle build -d src/ -d afp/thys $session
+          /home/isabelle/Isabelle/bin/isabelle build -d src/ -d afp/thys -R $session
+          /home/isabelle/Isabelle/bin/isabelle build -c -d src/ -d afp/thys $session
+
+      - name: Cache Heap Images
+        uses: actions/cache@v3
+        with:
+          path: /home/isabelle/.isabelle/Isabelle2022/heaps
+          restore-keys: heap-images-${{ github.branch }}
