--- a/.github/workflows/build_session.yml
+++ b/.github/workflows/build_session.yml
@@ -36,4 +36,5 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /home/isabelle/.isabelle/Isabelle2022/heaps
+          key: heap-images-${{ github.ref }}
           restore-keys: heap-images-${{ github.ref }}
