--- a/.github/workflows/build_session.yml
+++ b/.github/workflows/build_session.yml
@@ -22,7 +22,14 @@ jobs:
         with:
           repository: isabelle-prover/mirror-afp-2022
           path: afp
-       
+
+      - name: Cache Heap Images
+        uses: actions/cache@v3
+        with:
+          path: /home/isabelle/.isabelle/Isabelle2022/heaps
+          key: heap-images-${{ github.ref_name }}
+          restore-keys: heap-images-
+
       - name: Build Session
         run: |
           session="Set_Proc"
@@ -31,13 +38,6 @@ jobs:
           fi;
           /home/isabelle/Isabelle/bin/isabelle build -d src/ -d afp/thys -R $session
           /home/isabelle/Isabelle/bin/isabelle build -c -d src/ -d afp/thys $session
-
-      - name: Cache Heap Images
-        uses: actions/cache@v3
-        with:
-          path: /home/isabelle/.isabelle/Isabelle2022/heaps
-          key: heap-images-${{ github.ref_name }}
-          restore-keys: heap-images-${{ github.ref_name }}
 
       - name: Upload browser_info
         uses: actions/upload-artifact@v3
