--- a/.github/workflows/build_session.yml
+++ b/.github/workflows/build_session.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Cache Heap Images
         uses: actions/cache@v3
         with:
-          path: /home/isabelle/.isabelle/Isabelle2022/heaps
+          path: ~/.isabelle/Isabelle2022/heaps
           key: heap-images-${{ github.ref_name }}
           restore-keys: heap-images-
 
