--- a/.github/workflows/build_session.yml
+++ b/.github/workflows/build_session.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Set Isabelle Home User
         run: |
-          echo "$($ISABELLE_HOME/bin/isabelle getenv ISABELLE_HOME_USER" >> $GITHUB_ENV
+          echo "$($ISABELLE_HOME/bin/isabelle getenv ISABELLE_HOME_USER)" >> $GITHUB_ENV
 
       - name: Cache Heap Images
         uses: actions/cache@v3
