--- a/.github/workflows/build_session.yml
+++ b/.github/workflows/build_session.yml
@@ -6,6 +6,9 @@ on:
 
   workflow_dispatch:
 
+  permissions:
+    contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -45,10 +48,11 @@ jobs:
             session="Set_Proc_Typing"
           fi;
           $ISABELLE_HOME/bin/isabelle build -v -d src/ -d afp/thys -R $session
-          $ISABELLE_HOME/bin/isabelle build -v -c -d src/ -d afp/thys $session
+          $ISABELLE_HOME/bin/isabelle build -P browser_info -v -c -d src/ -d afp/thys $session
 
-      - name: Upload browser_info
-        uses: actions/upload-artifact@v3
+      - name: Upload browser_info to gh-pages
+        uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
-          name: browser_info-${{ github.ref_name }}
-          path: $ISABELLE_HOME_USER/browser_info/
+          folder: browser_info
+          target-folder: ${{ github.ref_name }}
+          single-commit: true
