--- a/.github/workflows/build_session.yml
+++ b/.github/workflows/build_session.yml
@@ -58,6 +58,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Download browser_info artifact
         uses: actions/download-artifact@v3
